--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
+    "vuelidate": "^0.7.4",
     "vuetify": "^1.3.0"
   },
   "devDependencies": {
