--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
-    "start": "node server.js"
+    "start": "yarn run build && node server.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "serve-static": "^1.13.2",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0"
