--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
-    "start": "yarn run build && node server.js"
+    "postinstall": "yarn run build",
+    "start": "node server.js"
   },
   "dependencies": {
+    "@vue/cli": "^3.4.1",
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "serve-static": "^1.13.2",
