--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "serve-static": "^1.13.2",
     "vue": "^2.5.22",
+    "vue-localstorage": "^0.6.2",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.4",
     "vuetify": "^1.3.0"
