--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "serve-static": "^1.13.2",
+    "solid-auth-client": "^2.3.0",
     "vue": "^2.5.22",
     "vue-localstorage": "^0.6.2",
     "vue-router": "^3.0.1",
